--- a/src/patternfly/components/InlineEdit/inline-edit.scss
+++ b/src/patternfly/components/InlineEdit/inline-edit.scss
@@ -2,17 +2,17 @@
 
 :where(:root,  .#{$inline-edit}) {
   // Group
-  --#{$inline-edit}__group--item--MarginRight: var(--pf-t--global--spacer--sm);
+  --#{$inline-edit}__group--item--MarginInlineEnd: var(--pf-t--global--spacer--sm);
 
   // Valid action
   --#{$inline-edit}__action--c-button--m-valid--m-plain--Color: var(--pf-t--global--icon--color--brand--default);
   --#{$inline-edit}__action--c-button--m-valid--m-plain--hover--Color: var(--pf-t--global--icon--color--brand--hover);
 
   // Icon button
-  --#{$inline-edit}__action--m-icon-group--item--MarginRight: var(--pf-t--global--spacer--sm);
+  --#{$inline-edit}__action--m-icon-group--item--MarginInlineEnd: var(--pf-t--global--spacer--sm);
 
   // Footer group
-  --#{$inline-edit}__group--m-footer--MarginTop: var(--pf-t--global--spacer--xl);
+  --#{$inline-edit}__group--m-footer--MarginBlockStart: var(--pf-t--global--spacer--xl);
 
   // Label
   --#{$inline-edit}__label--m-bold--FontWeight: var(--pf-t--global--font--weight--body--bold);
@@ -24,27 +24,27 @@
   align-items: baseline;
 
   > * {
-    margin-inline-end: var(--#{$inline-edit}__group--item--MarginRight);
+    margin-inline-end: var(--#{$inline-edit}__group--item--MarginInlineEnd);
   }
 
   &.pf-m-icon-group {
-    --#{$inline-edit}__group--item--MarginRight: var(--#{$inline-edit}__action--m-icon-group--item--MarginRight);
+    --#{$inline-edit}__group--item--MarginInlineEnd: var(--#{$inline-edit}__action--m-icon-group--item--MarginInlineEnd);
   }
 
   // Footer
   &.pf-m-footer {
-    margin-block-start: var(--#{$inline-edit}__group--m-footer--MarginTop);
+    margin-block-start: var(--#{$inline-edit}__group--m-footer--MarginBlockStart);
   }
 
   // Column
   &.pf-m-column {
-    --#{$inline-edit}__group--item--MarginRight: 0;
+    --#{$inline-edit}__group--item--MarginInlineEnd: 0;
 
     flex-direction: column;
   }
 
   > :last-child {
-    --#{$inline-edit}__group--item--MarginRight: 0;
+    --#{$inline-edit}__group--item--MarginInlineEnd: 0;
   }
 }
 
@@ -102,8 +102,8 @@
 
 // offset button by top padding
 .#{$inline-edit}__label + .#{$inline-edit}__action.pf-m-enable > .#{$button} {
-  margin-block-start: calc(var(--#{$button}--PaddingTop) * -1);
-  margin-block-end: calc(var(--#{$button}--PaddingBottom) * -1);
+  margin-block-start: calc(var(--#{$button}--PaddingBlockStart) * -1);
+  margin-block-end: calc(var(--#{$button}--PaddingBlockEnd) * -1);
 }
 
 .#{$inline-edit}__label.pf-m-bold {
