--- a/src/patternfly/components/Slider/slider.scss
+++ b/src/patternfly/components/Slider/slider.scss
@@ -2,11 +2,11 @@
 
 :where(:root, .#{$slider}) {
   --#{$slider}--value: 0; // should always be set inline
-  --#{$slider}__step--Left: 0; // should always be set inline
+  --#{$slider}__step--InlineStart: 0; // should always be set inline
 
   // rail
-  --#{$slider}__rail--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$slider}__rail--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$slider}__rail--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$slider}__rail--PaddingBlockEnd: var(--pf-t--global--spacer--md);
   --#{$slider}__rail-track--Height: #{pf-size-prem(4px)};
   --#{$slider}__rail-track--before--base--BackgroundColor: var(--pf-t--global--border--color--default);
   --#{$slider}__rail-track--before--fill--BackgroundColor: var(--pf-t--global--border--color--hover);
@@ -18,7 +18,7 @@
   --#{$slider}__steps--Height: var(--#{$slider}__steps--FontSize);
 
   // step tick
-  --#{$slider}__step-tick--Top: var(--pf-t--global--spacer--md);
+  --#{$slider}__step-tick--BlockStart: var(--pf-t--global--spacer--md);
   --#{$slider}__step-tick--Width: #{pf-size-prem(4px)};
   --#{$slider}__step-tick--Height: #{pf-size-prem(4px)};
   --#{$slider}__step-tick--BackgroundColor: var(--pf-t--global--icon--color--subtle);
@@ -30,15 +30,15 @@
 
   // step label
   --#{$slider}__step-label--TranslateX: -50%;
-  --#{$slider}__step-label--Top: calc(var(--pf-t--global--spacer--xl) + var(--#{$slider}__rail-track--Height));
+  --#{$slider}__step-label--BlockStart: calc(var(--pf-t--global--spacer--xl) + var(--#{$slider}__rail-track--Height));
   --#{$slider}__step--first-child__step-label--TranslateX: 0;
   --#{$slider}__step--last-child__step-label--TranslateX: -100%;
 
   // thumb
-  --#{$slider}__thumb--Top: calc(var(--#{$slider}__rail-track--Height) / 2 + var(--pf-t--global--spacer--md));
+  --#{$slider}__thumb--BlockStart: calc(var(--#{$slider}__rail-track--Height) / 2 + var(--pf-t--global--spacer--md));
   --#{$slider}__thumb--Width: #{pf-size-prem(16px)};
   --#{$slider}__thumb--Height: #{pf-size-prem(16px)};
-  --#{$slider}__thumb--Left: var(--#{$slider}--value);
+  --#{$slider}__thumb--InlineStart: var(--#{$slider}--value);
   --#{$slider}__thumb--BackgroundColor: var(--pf-t--global--color--brand--default);
   --#{$slider}__thumb--TranslateX: -50%;
   --#{$slider}__thumb--TranslateY: -50%;
@@ -58,18 +58,18 @@
   --#{$slider}__thumb--before--TranslateY: -50%;
 
   // value
-  --#{$slider}__value--MarginLeft: var(--pf-t--global--spacer--md);
-  --#{$slider}__value--c-form-control--width-base: calc(var(--#{$form-control}--PaddingLeft) + var(--#{$form-control}--PaddingRight) + #{pf-size-prem(20px)}); // form control base width + number input spinner width
+  --#{$slider}__value--MarginInlineStart: var(--pf-t--global--spacer--md);
+  --#{$slider}__value--c-form-control--width-base: calc(var(--#{$form-control}--PaddingInlineStart) + var(--#{$form-control}--PaddingInlineEnd) + #{pf-size-prem(20px)}); // form control base width + number input spinner width
   --#{$slider}__value--c-form-control--width-chars: 3;
   --#{$slider}__value--c-form-control--Width: calc(var(--#{$slider}__value--c-form-control--width-base) + var(--#{$slider}__value--c-form-control--width-chars) * 1ch);
   --#{$slider}__value--m-floating--TranslateX: -50%;
   --#{$slider}__value--m-floating--TranslateY: -100%;
-  --#{$slider}__value--m-floating--Left: var(--#{$slider}--value);
+  --#{$slider}__value--m-floating--InlineStart: var(--#{$slider}--value);
   --#{$slider}__value--m-floating--ZIndex: var(--pf-t--global--z-index--sm);
 
   // actions
-  --#{$slider}__actions--MarginRight: var(--pf-t--global--spacer--sm);
-  --#{$slider}__main--actions--MarginLeft: var(--pf-t--global--spacer--sm);
+  --#{$slider}__actions--MarginInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$slider}__main--actions--MarginInlineStart: var(--pf-t--global--spacer--sm);
 
   // disabled
   --#{$slider}--m-disabled__rail-track--before--fill--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
@@ -108,8 +108,8 @@
 }
 
 .#{$slider}__rail {
-  padding-block-start: var(--#{$slider}__rail--PaddingTop);
-  padding-block-end: var(--#{$slider}__rail--PaddingBottom);
+  padding-block-start: var(--#{$slider}__rail--PaddingBlockStart);
+  padding-block-end: var(--#{$slider}__rail--PaddingBlockEnd);
 }
 
 .#{$slider}__rail-track {
@@ -140,7 +140,7 @@
 .#{$slider}__step {
   position: absolute;
   inset-block-start: 0;
-  inset-inline-start: var(--#{$slider}__step--Left); // set programmatically as an inline style
+  inset-inline-start: var(--#{$slider}__step--InlineStart); // set programmatically as an inline style
   content: "";
 
   &.pf-m-active {
@@ -166,7 +166,7 @@
   );
 
   position: absolute;
-  inset-block-start: var(--#{$slider}__step-tick--Top);
+  inset-block-start: var(--#{$slider}__step-tick--BlockStart);
   inset-inline-start: 0;
   width: var(--#{$slider}__step-tick--Width);
   height: var(--#{$slider}__step-tick--Height);
@@ -182,7 +182,7 @@
   );
 
   position: absolute;
-  inset-block-start: var(--#{$slider}__step-label--Top);
+  inset-block-start: var(--#{$slider}__step-label--BlockStart);
   word-break: normal;
 }
 
@@ -194,8 +194,8 @@
   );
 
   position: absolute;
-  inset-block-start: var(--#{$slider}__thumb--Top);
-  inset-inline-start: var(--#{$slider}__thumb--Left);
+  inset-block-start: var(--#{$slider}__thumb--BlockStart);
+  inset-inline-start: var(--#{$slider}__thumb--InlineStart);
   width: var(--#{$slider}__thumb--Width);
   height: var(--#{$slider}__thumb--Height);
   cursor: pointer;
@@ -235,7 +235,7 @@
 }
 
 .#{$slider}__value {
-  margin-inline-start: var(--#{$slider}__value--MarginLeft);
+  margin-inline-start: var(--#{$slider}__value--MarginInlineStart);
 
   &.pf-m-floating {
     @include pf-v6-bidirectional-style(
@@ -244,11 +244,11 @@
       $rtl-val: translate(#{pf-v6-calc-inverse(var(--#{$slider}__value--m-floating--TranslateX))}, var(--#{$slider}__value--m-floating--TranslateY)),
     );
 
-    --#{$slider}__value--MarginLeft: 0;
+    --#{$slider}__value--MarginInlineStart: 0;
 
     position: absolute;
     inset-block-start: 0;
-    inset-inline-start: var(--#{$slider}__value--m-floating--Left);
+    inset-inline-start: var(--#{$slider}__value--m-floating--InlineStart);
     z-index: var(--#{$slider}__value--m-floating--ZIndex);
   }
 
@@ -259,11 +259,11 @@
 
 .#{$slider}__actions {
   display: flex;
-  margin-inline-end: var(--#{$slider}__actions--MarginRight);
+  margin-inline-end: var(--#{$slider}__actions--MarginInlineEnd);
 
   .#{$slider}__main ~ & {
-    --#{$slider}__actions--MarginRight: 0;
+    --#{$slider}__actions--MarginInlineEnd: 0;
 
-    margin-inline-start: var(--#{$slider}__main--actions--MarginLeft);
+    margin-inline-start: var(--#{$slider}__main--actions--MarginInlineStart);
   }
 }
