--- a/src/patternfly/components/AboutModalBox/about-modal-box.scss
+++ b/src/patternfly/components/AboutModalBox/about-modal-box.scss
@@ -22,34 +22,34 @@
   );
 
   // Brand
-  --#{$about-modal-box}__brand--PaddingTop: var(--pf-t--global--spacer--2xl);
-  --#{$about-modal-box}__brand--PaddingRight: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__brand--PaddingLeft: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__brand--PaddingBottom: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__brand--sm--PaddingRight: var(--pf-t--global--spacer--3xl);
-  --#{$about-modal-box}__brand--sm--PaddingLeft: var(--pf-t--global--spacer--3xl);
-  --#{$about-modal-box}__brand--sm--PaddingBottom: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__brand--PaddingBlockStart: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__brand--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--PaddingInlineStart: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--PaddingBlockEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--sm--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__brand--sm--PaddingInlineStart: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__brand--sm--PaddingBlockEnd: var(--pf-t--global--spacer--3xl);
 
   @media screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$about-modal-box}__brand--PaddingRight: var(--#{$about-modal-box}__brand--sm--PaddingRight);
-    --#{$about-modal-box}__brand--PaddingLeft: var(--#{$about-modal-box}__brand--sm--PaddingLeft);
-    --#{$about-modal-box}__brand--PaddingBottom: var(--#{$about-modal-box}__brand--sm--PaddingBottom);
+    --#{$about-modal-box}__brand--PaddingInlineEnd: var(--#{$about-modal-box}__brand--sm--PaddingInlineEnd);
+    --#{$about-modal-box}__brand--PaddingInlineStart: var(--#{$about-modal-box}__brand--sm--PaddingInlineStart);
+    --#{$about-modal-box}__brand--PaddingBlockEnd: var(--#{$about-modal-box}__brand--sm--PaddingBlockEnd);
   }
 
   // Close
   --#{$about-modal-box}__close--ZIndex: var(--pf-t--global--z-index--2xl);
-  --#{$about-modal-box}__close--PaddingTop: var(--pf-t--global--spacer--2xl);
-  --#{$about-modal-box}__close--PaddingRight: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__close--PaddingBottom: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__close--sm--PaddingBottom: var(--pf-t--global--spacer--3xl);
-  --#{$about-modal-box}__close--lg--PaddingRight: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__close--PaddingBlockStart: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__close--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__close--PaddingBlockEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__close--sm--PaddingBlockEnd: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__close--lg--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$about-modal-box}__close--PaddingBottom: var(--#{$about-modal-box}__close--sm--PaddingBottom);
+    --#{$about-modal-box}__close--PaddingBlockEnd: var(--#{$about-modal-box}__close--sm--PaddingBlockEnd);
   }
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--lg) {
-    --#{$about-modal-box}__close--PaddingRight: var(--#{$about-modal-box}__close--lg--PaddingRight);
+    --#{$about-modal-box}__close--PaddingInlineEnd: var(--#{$about-modal-box}__close--lg--PaddingInlineEnd);
   }
 
   // Close Button
@@ -59,42 +59,42 @@
   --#{$about-modal-box}__brand-image--Height: #{pf-size-prem(40px)};
 
   // Header
-  --#{$about-modal-box}__header--PaddingRight: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__header--PaddingBottom: var(--pf-t--global--spacer--sm);
-  --#{$about-modal-box}__header--PaddingLeft: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__header--sm--PaddingRight: var(--pf-t--global--spacer--3xl);
-  --#{$about-modal-box}__header--sm--PaddingLeft: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__header--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__header--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
+  --#{$about-modal-box}__header--PaddingInlineStart: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__header--sm--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__header--sm--PaddingInlineStart: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$about-modal-box}__header--PaddingRight: var(--#{$about-modal-box}__header--sm--PaddingRight);
-    --#{$about-modal-box}__header--PaddingLeft: var(--#{$about-modal-box}__header--sm--PaddingLeft);
+    --#{$about-modal-box}__header--PaddingInlineEnd: var(--#{$about-modal-box}__header--sm--PaddingInlineEnd);
+    --#{$about-modal-box}__header--PaddingInlineStart: var(--#{$about-modal-box}__header--sm--PaddingInlineStart);
   }
 
   // Strapline
-  --#{$about-modal-box}__strapline--PaddingTop: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__strapline--PaddingBlockStart: var(--pf-t--global--spacer--xl);
   --#{$about-modal-box}__strapline--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$about-modal-box}__strapline--Color: var(--pf-t--global--text--color--subtle);
-  --#{$about-modal-box}__strapline--sm--PaddingTop: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__strapline--sm--PaddingBlockStart: var(--pf-t--global--spacer--2xl);
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$about-modal-box}__strapline--PaddingTop: var(--#{$about-modal-box}__strapline--sm--PaddingTop);
+    --#{$about-modal-box}__strapline--PaddingBlockStart: var(--#{$about-modal-box}__strapline--sm--PaddingBlockStart);
   }
 
   // Content
-  --#{$about-modal-box}__content--MarginTop: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__content--MarginRight: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__content--MarginBottom: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__content--MarginLeft: var(--pf-t--global--spacer--xl);
-  --#{$about-modal-box}__content--sm--MarginTop: var(--pf-t--global--spacer--2xl);
-  --#{$about-modal-box}__content--sm--MarginRight: var(--pf-t--global--spacer--3xl);
-  --#{$about-modal-box}__content--sm--MarginBottom: var(--pf-t--global--spacer--2xl);
-  --#{$about-modal-box}__content--sm--MarginLeft: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__content--MarginBlockStart: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginBlockEnd: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginInlineStart: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--sm--MarginBlockStart: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__content--sm--MarginInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__content--sm--MarginBlockEnd: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__content--sm--MarginInlineStart: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$about-modal-box}__content--MarginTop: var(--#{$about-modal-box}__content--sm--MarginTop);
-    --#{$about-modal-box}__content--MarginRight: var(--#{$about-modal-box}__content--sm--MarginRight);
-    --#{$about-modal-box}__content--MarginBottom: var(--#{$about-modal-box}__content--sm--MarginBottom);
-    --#{$about-modal-box}__content--MarginLeft: var(--#{$about-modal-box}__content--sm--MarginLeft);
+    --#{$about-modal-box}__content--MarginBlockStart: var(--#{$about-modal-box}__content--sm--MarginBlockStart);
+    --#{$about-modal-box}__content--MarginInlineEnd: var(--#{$about-modal-box}__content--sm--MarginInlineEnd);
+    --#{$about-modal-box}__content--MarginBlockEnd: var(--#{$about-modal-box}__content--sm--MarginBlockEnd);
+    --#{$about-modal-box}__content--MarginInlineStart: var(--#{$about-modal-box}__content--sm--MarginInlineStart);
   }
 }
 
@@ -137,10 +137,10 @@
 .#{$about-modal-box}__brand {
   display: flex;
   grid-area: brand;
-  padding-block-start: var(--#{$about-modal-box}__brand--PaddingTop);
-  padding-block-end: var(--#{$about-modal-box}__brand--PaddingBottom);
-  padding-inline-start: var(--#{$about-modal-box}__brand--PaddingLeft);
-  padding-inline-end: var(--#{$about-modal-box}__brand--PaddingRight);
+  padding-block-start: var(--#{$about-modal-box}__brand--PaddingBlockStart);
+  padding-block-end: var(--#{$about-modal-box}__brand--PaddingBlockEnd);
+  padding-inline-start: var(--#{$about-modal-box}__brand--PaddingInlineStart);
+  padding-inline-end: var(--#{$about-modal-box}__brand--PaddingInlineEnd);
 }
 
 .#{$about-modal-box}__brand-image {
@@ -152,14 +152,14 @@
   display: flex;
   flex-direction: column;
   grid-area: header;
-  padding-block-end: var(--#{$about-modal-box}__header--PaddingBottom);
-  padding-inline-start: var(--#{$about-modal-box}__header--PaddingLeft);
-  padding-inline-end: var(--#{$about-modal-box}__header--PaddingRight);
+  padding-block-end: var(--#{$about-modal-box}__header--PaddingBlockEnd);
+  padding-inline-start: var(--#{$about-modal-box}__header--PaddingInlineStart);
+  padding-inline-end: var(--#{$about-modal-box}__header--PaddingInlineEnd);
 }
 
 // Strapline
 .#{$about-modal-box}__strapline {
-  padding-block-start: var(--#{$about-modal-box}__strapline--PaddingTop);
+  padding-block-start: var(--#{$about-modal-box}__strapline--PaddingBlockStart);
   margin-block-start: auto;
   font-size: var(--#{$about-modal-box}__strapline--FontSize);
   color: var(--#{$about-modal-box}__strapline--Color);
@@ -170,10 +170,10 @@
   display: flex;
   flex-direction: column;
   grid-area: content;
-  margin-block-start: var(--#{$about-modal-box}__content--MarginTop);
-  margin-block-end: var(--#{$about-modal-box}__content--MarginBottom);
-  margin-inline-start: var(--#{$about-modal-box}__content--MarginLeft); // Using margin instead of padding to prevent scrollbar extending to top of content block
-  margin-inline-end: var(--#{$about-modal-box}__content--MarginRight);
+  margin-block-start: var(--#{$about-modal-box}__content--MarginBlockStart);
+  margin-block-end: var(--#{$about-modal-box}__content--MarginBlockEnd);
+  margin-inline-start: var(--#{$about-modal-box}__content--MarginInlineStart); // Using margin instead of padding to prevent scrollbar extending to top of content block
+  margin-inline-end: var(--#{$about-modal-box}__content--MarginInlineEnd);
   overflow-x: hidden;
   overflow-y: auto;
   overscroll-behavior: contain;
@@ -194,9 +194,9 @@
   grid-area: close;
   align-items: flex-start;
   justify-content: flex-end;
-  padding-block-start: var(--#{$about-modal-box}__close--PaddingTop);
-  padding-block-end: var(--#{$about-modal-box}__close--PaddingBottom);
-  padding-inline-end: var(--#{$about-modal-box}__close--PaddingRight);
+  padding-block-start: var(--#{$about-modal-box}__close--PaddingBlockStart);
+  padding-block-end: var(--#{$about-modal-box}__close--PaddingBlockEnd);
+  padding-inline-end: var(--#{$about-modal-box}__close--PaddingInlineEnd);
 
   @media only screen and (min-width: $pf-v6-global--breakpoint--sm) {
     grid-area: 1 / 2;
