--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -1,19 +1,19 @@
 @use '../../sass-utilities' as *;
 
 :where(:root, .#{$banner}) {
-  --#{$banner}--PaddingTop: var(--pf-t--global--spacer--xs);
-  --#{$banner}--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$banner}--md--PaddingRight: var(--pf-t--global--spacer--lg);
-  --#{$banner}--PaddingBottom: var(--pf-t--global--spacer--xs);
-  --#{$banner}--PaddingLeft: var(--pf-t--global--spacer--md);
-  --#{$banner}--md--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$banner}--PaddingBlockStart: var(--pf-t--global--spacer--xs);
+  --#{$banner}--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$banner}--md--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
+  --#{$banner}--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
+  --#{$banner}--PaddingInlineStart: var(--pf-t--global--spacer--md);
+  --#{$banner}--md--PaddingInlineStart: var(--pf-t--global--spacer--lg);
   --#{$banner}--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$banner}--Color: var(--pf-t--global--text--color--nonstatus--on-gray--default);
   --#{$banner}--BackgroundColor: var(--pf-t--global--color--nonstatus--gray--default);
 
   @media (min-width: $pf-v6-global--breakpoint--md) {
-    --#{$banner}--PaddingRight: var(--#{$banner}--md--PaddingRight);
-    --#{$banner}--PaddingLeft: var(--#{$banner}--md--PaddingLeft);
+    --#{$banner}--PaddingInlineEnd: var(--#{$banner}--md--PaddingInlineEnd);
+    --#{$banner}--PaddingInlineStart: var(--#{$banner}--md--PaddingInlineStart);
   }
 
   // banner link variables
@@ -61,10 +61,10 @@
 
 .#{$banner} {
   flex-shrink: 0;
-  padding-block-start: var(--#{$banner}--PaddingTop);
-  padding-block-end: var(--#{$banner}--PaddingBottom);
-  padding-inline-start: var(--#{$banner}--PaddingLeft);
-  padding-inline-end: var(--#{$banner}--PaddingRight);
+  padding-block-start: var(--#{$banner}--PaddingBlockStart);
+  padding-block-end: var(--#{$banner}--PaddingBlockEnd);
+  padding-inline-start: var(--#{$banner}--PaddingInlineStart);
+  padding-inline-end: var(--#{$banner}--PaddingInlineEnd);
   font-size: var(--#{$banner}--FontSize);
   color: var(--#{$banner}--Color);
   white-space: nowrap;
