--- a/src/patternfly/components/Chip/chip-group.scss
+++ b/src/patternfly/components/Chip/chip-group.scss
@@ -3,10 +3,10 @@
 .#{$chip}-group {
   // Chip group - spaces main and close
   // column-gap spacer supports legacy chip group
-  --#{$chip}-group--PaddingTop: 0;
-  --#{$chip}-group--PaddingRight: 0;
-  --#{$chip}-group--PaddingBottom: 0;
-  --#{$chip}-group--PaddingLeft: 0;
+  --#{$chip}-group--PaddingBlockStart: 0;
+  --#{$chip}-group--PaddingInlineEnd: 0;
+  --#{$chip}-group--PaddingBlockEnd: 0;
+  --#{$chip}-group--PaddingInlineStart: 0;
   --#{$chip}-group--RowGap: var(--#{$pf-global}--spacer--sm);
   --#{$chip}-group--ColumnGap: 0;
 
@@ -19,10 +19,10 @@
   --#{$chip}-group__list--ColumnGap: var(--#{$pf-global}--spacer--xs);
 
   // Category modifier
-  --#{$chip}-group--m-category--PaddingTop: var(--#{$pf-global}--spacer--xs);
-  --#{$chip}-group--m-category--PaddingRight: var(--#{$pf-global}--spacer--xs);
-  --#{$chip}-group--m-category--PaddingBottom: var(--#{$pf-global}--spacer--xs);
-  --#{$chip}-group--m-category--PaddingLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$chip}-group--m-category--PaddingBlockStart: var(--#{$pf-global}--spacer--xs);
+  --#{$chip}-group--m-category--PaddingInlineEnd: var(--#{$pf-global}--spacer--xs);
+  --#{$chip}-group--m-category--PaddingBlockEnd: var(--#{$pf-global}--spacer--xs);
+  --#{$chip}-group--m-category--PaddingInlineStart: var(--#{$pf-global}--spacer--sm);
   --#{$chip}-group--m-category--BorderRadius: var(--#{$pf-global}--BorderRadius--sm);
   --#{$chip}-group--m-category--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
 
@@ -31,22 +31,22 @@
   --#{$chip}-group__label--MaxWidth: 18ch;
 
   // Chip group close - negative margin stretches height for click area
-  --#{$chip}-group__close--MarginTop: calc(var(--#{$pf-global}--spacer--xs) * -1);
-  --#{$chip}-group__close--MarginBottom: calc(var(--#{$pf-global}--spacer--xs) * -1);
+  --#{$chip}-group__close--MarginBlockStart: calc(var(--#{$pf-global}--spacer--xs) * -1);
+  --#{$chip}-group__close--MarginBlockEnd: calc(var(--#{$pf-global}--spacer--xs) * -1);
 
   row-gap: var(--#{$chip}-group--RowGap);
   column-gap: var(--#{$chip}-group--ColumnGap);
   max-width: 100%;
-  padding-block-start: var(--#{$chip}-group--PaddingTop);
-  padding-block-end: var(--#{$chip}-group--PaddingBottom);
-  padding-inline-start: var(--#{$chip}-group--PaddingLeft);
-  padding-inline-end: var(--#{$chip}-group--PaddingRight);
+  padding-block-start: var(--#{$chip}-group--PaddingBlockStart);
+  padding-block-end: var(--#{$chip}-group--PaddingBlockEnd);
+  padding-inline-start: var(--#{$chip}-group--PaddingInlineStart);
+  padding-inline-end: var(--#{$chip}-group--PaddingInlineEnd);
 
   &.pf-m-category {
-    --#{$chip}-group--PaddingTop: var(--#{$chip}-group--m-category--PaddingTop);
-    --#{$chip}-group--PaddingRight: var(--#{$chip}-group--m-category--PaddingRight);
-    --#{$chip}-group--PaddingBottom: var(--#{$chip}-group--m-category--PaddingBottom);
-    --#{$chip}-group--PaddingLeft: var(--#{$chip}-group--m-category--PaddingLeft);
+    --#{$chip}-group--PaddingBlockStart: var(--#{$chip}-group--m-category--PaddingBlockStart);
+    --#{$chip}-group--PaddingInlineEnd: var(--#{$chip}-group--m-category--PaddingInlineEnd);
+    --#{$chip}-group--PaddingBlockEnd: var(--#{$chip}-group--m-category--PaddingBlockEnd);
+    --#{$chip}-group--PaddingInlineStart: var(--#{$chip}-group--m-category--PaddingInlineStart);
 
     background-color: var(--#{$chip}-group--m-category--BackgroundColor);
     border-radius: var(--#{$chip}-group--m-category--BorderRadius);
@@ -91,6 +91,6 @@
 .#{$chip}-group__close {
   display: flex;
   align-self: flex-start;
-  margin-block-start: var(--#{$chip}-group__close--MarginTop);
-  margin-block-end: var(--#{$chip}-group__close--MarginBottom);
+  margin-block-start: var(--#{$chip}-group__close--MarginBlockStart);
+  margin-block-end: var(--#{$chip}-group__close--MarginBlockEnd);
 }
