--- a/src/patternfly/components/DataList/data-list-grid.scss
+++ b/src/patternfly/components/DataList/data-list-grid.scss
@@ -25,34 +25,34 @@
 }
 
 @include pf-v6-c-data-list-responsive-block {
-  --#{$data-list}__cell--cell--PaddingTop: var(--#{$data-list}__cell--cell--md--PaddingTop);
-  --#{$data-list}__cell--PaddingBottom: var(--#{$data-list}__cell--md--PaddingBottom);
-  --#{$data-list}__item-control--MarginRight: var(--#{$data-list}__item-control--md--MarginRight);
-  --#{$data-list}__item-action--MarginLeft: var(--#{$data-list}__item-action--md--MarginLeft);
-  --#{$data-list}__expandable-content-body--PaddingTop: var(--#{$data-list}__expandable-content-body--md--PaddingTop);
-  --#{$data-list}__expandable-content-body--PaddingBottom: var(--#{$data-list}__expandable-content-body--md--PaddingBottom);
-  --#{$data-list}--m-compact__cell--PaddingBottom: var(--#{$data-list}--m-compact__cell--md--PaddingBottom);
-  --#{$data-list}--m-compact__cell-cell--PaddingTop: var(--#{$data-list}--m-compact__cell-cell--md--PaddingTop);
+  --#{$data-list}__cell--cell--PaddingBlockStart: var(--#{$data-list}__cell--cell--md--PaddingBlockStart);
+  --#{$data-list}__cell--PaddingBlockEnd: var(--#{$data-list}__cell--md--PaddingBlockEnd);
+  --#{$data-list}__item-control--MarginInlineEnd: var(--#{$data-list}__item-control--md--MarginInlineEnd);
+  --#{$data-list}__item-action--MarginInlineStart: var(--#{$data-list}__item-action--md--MarginInlineStart);
+  --#{$data-list}__expandable-content-body--PaddingBlockStart: var(--#{$data-list}__expandable-content-body--md--PaddingBlockStart);
+  --#{$data-list}__expandable-content-body--PaddingBlockEnd: var(--#{$data-list}__expandable-content-body--md--PaddingBlockEnd);
+  --#{$data-list}--m-compact__cell--PaddingBlockEnd: var(--#{$data-list}--m-compact__cell--md--PaddingBlockEnd);
+  --#{$data-list}--m-compact__cell-cell--PaddingBlockStart: var(--#{$data-list}--m-compact__cell-cell--md--PaddingBlockStart);
 
   @media screen and (min-width: $pf-v6-global--breakpoint--xl) {
-    --#{$data-list}__item-row--PaddingRight: var(--#{$data-list}__item-row--xl--PaddingRight);
-    --#{$data-list}__item-row--PaddingLeft: var(--#{$data-list}__item-row--xl--PaddingLeft);
-    --#{$data-list}__expandable-content-body--PaddingRight: var(--#{$data-list}__expandable-content-body--xl--PaddingRight);
-    --#{$data-list}__expandable-content-body--PaddingLeft: var(--#{$data-list}__expandable-content-body--xl--PaddingLeft);
+    --#{$data-list}__item-row--PaddingInlineEnd: var(--#{$data-list}__item-row--xl--PaddingInlineEnd);
+    --#{$data-list}__item-row--PaddingInlineStart: var(--#{$data-list}__item-row--xl--PaddingInlineStart);
+    --#{$data-list}__expandable-content-body--PaddingInlineEnd: var(--#{$data-list}__expandable-content-body--xl--PaddingInlineEnd);
+    --#{$data-list}__expandable-content-body--PaddingInlineStart: var(--#{$data-list}__expandable-content-body--xl--PaddingInlineStart);
   }
 
   .#{$data-list}__item-content {
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
-    padding-block-end: var(--#{$data-list}__item-content--md--PaddingBottom);
+    padding-block-end: var(--#{$data-list}__item-content--md--PaddingBlockEnd);
   }
 
   .#{$data-list}__cell {
     // stylelint-disable selector-not-notation
     // update to single :not() in breaking change
     &:not(:last-child):not(.pf-m-icon) {
-      margin-inline-end: var(--#{$data-list}__cell--MarginRight);
+      margin-inline-end: var(--#{$data-list}__cell--MarginInlineEnd);
     }
 
     // for all subsequent .#{$data-list}__cell's, set to full width
