--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -17,15 +17,15 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   --#{$dual-list-selector}--GridTemplateColumns--pane--MinMax--max: #{pf-size-prem(450px)};
 
   // Header
-  --#{$dual-list-selector}__header--MarginBottom: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__header--MarginBlockEnd: var(--pf-t--global--spacer--sm);
 
   // Title
   --#{$dual-list-selector}__title-text--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$dual-list-selector}__title-text--FontSize: var(--pf-t--global--font--size--body--lg);
 
   // Tools
-  --#{$dual-list-selector}__tools--MarginBottom: var(--pf-t--global--spacer--md);
-  --#{$dual-list-selector}__tools-filter--tools-actions--MarginLeft: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__tools--MarginBlockEnd: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__tools-filter--tools-actions--MarginInlineStart: var(--pf-t--global--spacer--sm);
 
   // Menu
   --#{$dual-list-selector}__menu--BorderWidth: var(--pf-t--global--border--width--regular);
@@ -44,14 +44,14 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   --#{$dual-list-selector}__list-item--m-ghost-row--Opacity: .4;
 
   // Item
-  --#{$dual-list-selector}__item--PaddingTop: var(--pf-t--global--spacer--sm);
-  --#{$dual-list-selector}__item--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$dual-list-selector}__item--PaddingBottom: var(--pf-t--global--spacer--sm);
-  --#{$dual-list-selector}__item--PaddingLeft: var(--pf-t--global--spacer--md);
-  --#{$dual-list-selector}__item--m-expandable--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__item--PaddingBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__item--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__item--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__item--PaddingInlineStart: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__item--m-expandable--PaddingInlineStart: var(--pf-t--global--spacer--md);
   --#{$dual-list-selector}__item--indent--base: calc(var(--pf-t--global--spacer--md) + var(--pf-t--global--spacer--sm) + var(--#{$dual-list-selector}__list-item-row--FontSize));
   --#{$dual-list-selector}__item--nested-indent--base: calc(var(--#{$dual-list-selector}__item--indent--base) - var(--pf-t--global--spacer--md));
-  --#{$dual-list-selector}__draggable--item--PaddingLeft: var(--pf-t--global--spacer--xs);
+  --#{$dual-list-selector}__draggable--item--PaddingInlineStart: var(--pf-t--global--spacer--xs);
 
   // Item text
   --#{$dual-list-selector}__item-text--Color: var(--pf-t--global--text--color--subtle);
@@ -59,23 +59,23 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   --#{$dual-list-selector}__list-item--m-disabled__item-text--Color: var(--pf-t--global--text--color--disabled);
 
   // Status
-  --#{$dual-list-selector}__status--MarginBottom: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__status--MarginBlockEnd: var(--pf-t--global--spacer--sm);
   --#{$dual-list-selector}__status-text--FontSize: var(--pf-t--global--font--size--sm);
   --#{$dual-list-selector}__status-text--Color: var(--pf-t--global--text--color--subtle);
 
   // Controls
-  --#{$dual-list-selector}__controls--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$dual-list-selector}__controls--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__controls--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$dual-list-selector}__controls--PaddingInlineStart: var(--pf-t--global--spacer--md);
   --#{$dual-list-selector}__controls--Gap: var(--pf-t--global--spacer--sm);
   --#{$dual-list-selector}__controls--MarginBlockStart: var(--pf-t--global--spacer--md);
 
   // Toggle
-  --#{$dual-list-selector}__item-toggle--PaddingRight: var(--pf-t--global--spacer--sm);
-  --#{$dual-list-selector}__list__list__item-toggle--Left: 0;
+  --#{$dual-list-selector}__item-toggle--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__list__list__item-toggle--InlineStart: 0;
   --#{$dual-list-selector}__list__list__item-toggle--TranslateX: -100%;
 
   // Check
-  --#{$dual-list-selector}__item-check--MarginRight: var(--pf-t--global--spacer--sm);
+  --#{$dual-list-selector}__item-check--MarginInlineEnd: var(--pf-t--global--spacer--sm);
 
   // Badge
   --#{$dual-list-selector}__item--c-badge--m-read--BackgroundColor: var(--pf-t--global--color--nonstatus--gray--default);
@@ -115,7 +115,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 
 .#{$dual-list-selector}__header {
   grid-area: var(--#{$dual-list-selector}__header--GridArea);
-  margin-block-end: var(--#{$dual-list-selector}__header--MarginBottom);
+  margin-block-end: var(--#{$dual-list-selector}__header--MarginBlockEnd);
 }
 
 .#{$dual-list-selector}__title-text {
@@ -126,7 +126,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 .#{$dual-list-selector}__tools {
   display: flex;
   grid-area: var(--#{$dual-list-selector}__tools--GridArea);
-  margin-block-end: var(--#{$dual-list-selector}__tools--MarginBottom);
+  margin-block-end: var(--#{$dual-list-selector}__tools--MarginBlockEnd);
 }
 
 .#{$dual-list-selector}__tools-filter {
@@ -137,14 +137,14 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   display: flex;
 
   .#{$dual-list-selector}__tools-filter ~ & {
-    margin-inline-start: var(--#{$dual-list-selector}__tools-filter--tools-actions--MarginLeft);
+    margin-inline-start: var(--#{$dual-list-selector}__tools-filter--tools-actions--MarginInlineStart);
   }
 }
 
 .#{$dual-list-selector}__status {
   display: flex;
   grid-area: var(--#{$dual-list-selector}__status--GridArea);
-  margin-block-end: var(--#{$dual-list-selector}__status--MarginBottom);
+  margin-block-end: var(--#{$dual-list-selector}__status--MarginBlockEnd);
 }
 
 .#{$dual-list-selector}__status-text {
@@ -167,8 +167,8 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   --#{$dual-list-selector}__item-toggle-icon--Rotate: 0;
 
   & & {
-    --#{$dual-list-selector}__item-toggle--MarginTop: 0;
-    --#{$dual-list-selector}__item-toggle--MarginBottom: 0;
+    --#{$dual-list-selector}__item-toggle--MarginBlockStart: 0;
+    --#{$dual-list-selector}__item-toggle--MarginBlockEnd: 0;
 
     .#{$dual-list-selector}__item-toggle {
       @include pf-v6-bidirectional-style(
@@ -178,7 +178,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
       );
 
       position: absolute;
-      inset-inline-start: var(--#{$dual-list-selector}__list__list__item-toggle--Left);
+      inset-inline-start: var(--#{$dual-list-selector}__list__list__item-toggle--InlineStart);
     }
   }
 
@@ -196,7 +196,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   }
 
   &.pf-m-expandable {
-    --#{$dual-list-selector}__item--PaddingLeft: var(--#{$dual-list-selector}__item--m-expandable--PaddingLeft);
+    --#{$dual-list-selector}__item--PaddingInlineStart: var(--#{$dual-list-selector}__item--m-expandable--PaddingInlineStart);
   }
 
   &.pf-m-expanded {
@@ -255,7 +255,7 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   display: flex;
 
   + .#{$dual-list-selector}__item {
-    --#{$dual-list-selector}__item--PaddingLeft: var(--#{$dual-list-selector}__draggable--item--PaddingLeft);
+    --#{$dual-list-selector}__item--PaddingInlineStart: var(--#{$dual-list-selector}__draggable--item--PaddingInlineStart);
   }
 
   .#{$button} {
@@ -272,10 +272,10 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 .#{$dual-list-selector}__item {
   position: relative;
   width: 100%;
-  padding-block-start: var(--#{$dual-list-selector}__item--PaddingTop);
-  padding-block-end: var(--#{$dual-list-selector}__item--PaddingBottom);
-  padding-inline-start: var(--#{$dual-list-selector}__item--PaddingLeft);
-  padding-inline-end: var(--#{$dual-list-selector}__item--PaddingRight);
+  padding-block-start: var(--#{$dual-list-selector}__item--PaddingBlockStart);
+  padding-block-end: var(--#{$dual-list-selector}__item--PaddingBlockEnd);
+  padding-inline-start: var(--#{$dual-list-selector}__item--PaddingInlineStart);
+  padding-inline-end: var(--#{$dual-list-selector}__item--PaddingInlineEnd);
   cursor: pointer;
   outline-offset: -2px;
 }
@@ -303,8 +303,8 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
   align-items: center;
   align-self: center;
   justify-content: center;
-  padding-inline-start: var(--#{$dual-list-selector}__controls--PaddingLeft);
-  padding-inline-end: var(--#{$dual-list-selector}__controls--PaddingRight);
+  padding-inline-start: var(--#{$dual-list-selector}__controls--PaddingInlineStart);
+  padding-inline-end: var(--#{$dual-list-selector}__controls--PaddingInlineEnd);
   margin-block-start: var(--#{$dual-list-selector}__controls--MarginBlockStart);
 }
 
@@ -318,18 +318,18 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 }
 
 .#{$dual-list-selector}__item-toggle {
-  padding-block-start: var(--#{$dual-list-selector}__item-toggle--PaddingTop);
-  padding-block-end: var(--#{$dual-list-selector}__item-toggle--PaddingBottom);
-  padding-inline-start: var(--#{$dual-list-selector}__item-toggle--PaddingLeft);
-  padding-inline-end: var(--#{$dual-list-selector}__item-toggle--PaddingRight);
-  margin-block-start: var(--#{$dual-list-selector}__item-toggle--MarginTop);
-  margin-block-end: var(--#{$dual-list-selector}__item-toggle--MarginBottom);
+  padding-block-start: var(--#{$dual-list-selector}__item-toggle--PaddingBlockStart);
+  padding-block-end: var(--#{$dual-list-selector}__item-toggle--PaddingBlockEnd);
+  padding-inline-start: var(--#{$dual-list-selector}__item-toggle--PaddingInlineStart);
+  padding-inline-end: var(--#{$dual-list-selector}__item-toggle--PaddingInlineEnd);
+  margin-block-start: var(--#{$dual-list-selector}__item-toggle--MarginBlockStart);
+  margin-block-end: var(--#{$dual-list-selector}__item-toggle--MarginBlockEnd);
 }
 
 .#{$dual-list-selector}__item-check {
   display: flex;
   align-items: center;
-  margin-inline-end: var(--#{$dual-list-selector}__item-check--MarginRight);
+  margin-inline-end: var(--#{$dual-list-selector}__item-check--MarginInlineEnd);
 }
 
 .#{$dual-list-selector}__item-toggle-icon {
@@ -348,8 +348,8 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
 
   @for $i from 1 through $pf-v6-c-dual-list-selector__item--MaxNesting {
     #{$nested-item} {
-      --#{$dual-list-selector}__item--PaddingLeft: calc(var(--#{$dual-list-selector}__item--nested-indent--base) * #{$i} + var(--#{$dual-list-selector}__item--indent--base));
-      --#{$dual-list-selector}__list__list__item-toggle--Left: var(--#{$dual-list-selector}__item--PaddingLeft);
+      --#{$dual-list-selector}__item--PaddingInlineStart: calc(var(--#{$dual-list-selector}__item--nested-indent--base) * #{$i} + var(--#{$dual-list-selector}__item--indent--base));
+      --#{$dual-list-selector}__list__list__item-toggle--InlineStart: var(--#{$dual-list-selector}__item--PaddingInlineStart);
     }
 
     $nested-item: $nested-item + " " + $root;
