--- a/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
+++ b/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
@@ -12,10 +12,10 @@
     "title"
     "upload"
     "info";
-  --#{$multiple-file-upload}__main--PaddingTop: var(--pf-t--global--spacer--xl);
-  --#{$multiple-file-upload}__main--PaddingRight: var(--pf-t--global--spacer--xl);
-  --#{$multiple-file-upload}__main--PaddingBottom: var(--pf-t--global--spacer--xl);
-  --#{$multiple-file-upload}__main--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingBlockStart: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingBlockEnd: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingInlineStart: var(--pf-t--global--spacer--xl);
   --#{$multiple-file-upload}__main--BorderWidth: var(--pf-t--global--border--width--regular);
   --#{$multiple-file-upload}__main--BorderStyle: dashed;
   --#{$multiple-file-upload}__main--BorderColor: var(--pf-t--global--border--color--default);
@@ -38,8 +38,8 @@
 
   // title text separator
   --#{$multiple-file-upload}__title-text-separator--Display: block;
-  --#{$multiple-file-upload}__title-text-separator--MarginTop: var(--pf-t--global--spacer--sm);
-  --#{$multiple-file-upload}__title-text-separator--MarginBottom: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__title-text-separator--MarginBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__title-text-separator--MarginBlockEnd: var(--pf-t--global--spacer--sm);
   --#{$multiple-file-upload}__title-text-separator--Color: var(--pf-t--global--text--color--regular);
   --#{$multiple-file-upload}__title-text-separator--FontFamily: var(--pf-t--global--font--family--body);
   --#{$multiple-file-upload}__title-text-separator--FontSize: var(--pf-t--global--font--size--body--lg);
@@ -48,7 +48,7 @@
   // info
   --#{$multiple-file-upload}__info--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$multiple-file-upload}__info--Color: var(--pf-t--global--text--color--subtle);
-  --#{$multiple-file-upload}__info--MarginTop: var(--pf-t--global--spacer--lg);
+  --#{$multiple-file-upload}__info--MarginBlockStart: var(--pf-t--global--spacer--lg);
 
   // drag-over
   --#{$multiple-file-upload}--m-drag-over__main--BorderStyle: dashed;
@@ -62,7 +62,7 @@
     "title upload"
     "info upload";
   --#{$multiple-file-upload}--m-horizontal__main--Gap: var(--pf-t--global--spacer--sm) var(--pf-t--global--spacer--lg);
-  --#{$multiple-file-upload}--m-horizontal__main--PaddingBottom: var(--pf-t--global--spacer--lg);
+  --#{$multiple-file-upload}--m-horizontal__main--PaddingBlockEnd: var(--pf-t--global--spacer--lg);
   --#{$multiple-file-upload}--m-horizontal__title--GridTemplateColumns: auto 1fr;
   --#{$multiple-file-upload}--m-horizontal__title--Gap: var(--pf-t--global--spacer--sm);
 
@@ -70,17 +70,17 @@
   --#{$multiple-file-upload}--m-horizontal__title-icon--FontSize: var(--pf-t--global--font--size--heading--xs);
   --#{$multiple-file-upload}--m-horizontal__title-text--FontSize: var(--pf-t--global--font--size--heading--xs);
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--Display: inline;
-  --#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginTop: 0;
+  --#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginBlockStart: 0;
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--FontFamily: var(--pf-t--global--font--family--heading);
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--FontSize: var(--pf-t--global--font--size--heading--xs);
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--FontWeight: var(--pf-t--global--font--weight--heading);
-  --#{$multiple-file-upload}--m-horizontal__info--MarginTop: 0;
+  --#{$multiple-file-upload}--m-horizontal__info--MarginBlockStart: 0;
 
   // status container
-  --#{$multiple-file-upload}__status--PaddingTop: var(--pf-t--global--spacer--sm);
-  --#{$multiple-file-upload}__status--PaddingBottom: var(--pf-t--global--spacer--sm);
-  --#{$multiple-file-upload}__status--PaddingLeft: var(--pf-t--global--spacer--md);
-  --#{$multiple-file-upload}__status--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status--PaddingBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__status--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__status--PaddingInlineStart: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status--PaddingInlineEnd: var(--pf-t--global--spacer--md);
 
   // status progress
   --#{$multiple-file-upload}__status-progress--GridTemplateColumns: auto 1fr;
@@ -90,8 +90,8 @@
   --#{$multiple-file-upload}__status-progress-icon--Color: var(--pf-t--global--icon--color--regular);
 
   // status item
-  --#{$multiple-file-upload}__status-item--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$multiple-file-upload}__status-item--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status-item--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status-item--PaddingBlockEnd: var(--pf-t--global--spacer--md);
   --#{$multiple-file-upload}__status-item--GridTemplateColumns: auto 1fr auto;
   --#{$multiple-file-upload}__status-item--Gap: var(--pf-t--global--spacer--sm);
   --#{$multiple-file-upload}__status-item--BorderWidth: var(--pf-t--global--border--width--regular);
@@ -122,17 +122,17 @@
     --#{$multiple-file-upload}__main--GridTemplateColumns: var(--#{$multiple-file-upload}--m-horizontal__main--GridTemplateColumns);
     --#{$multiple-file-upload}__main--GridTemplateAreas: var(--#{$multiple-file-upload}--m-horizontal__main--GridTemplateAreas);
     --#{$multiple-file-upload}__main--Gap: var(--#{$multiple-file-upload}--m-horizontal__main--Gap);
-    --#{$multiple-file-upload}__main--PaddingBottom: var(--#{$multiple-file-upload}--m-horizontal__main--PaddingBottom);
+    --#{$multiple-file-upload}__main--PaddingBlockEnd: var(--#{$multiple-file-upload}--m-horizontal__main--PaddingBlockEnd);
     --#{$multiple-file-upload}__title--GridTemplateColumns: var(--#{$multiple-file-upload}--m-horizontal__title--GridTemplateColumns);
     --#{$multiple-file-upload}__title--Gap: var(--#{$multiple-file-upload}--m-horizontal__title--Gap);
     --#{$multiple-file-upload}__title-icon--FontSize: var(--#{$multiple-file-upload}--m-horizontal__title-icon--FontSize);
     --#{$multiple-file-upload}__title-text--FontSize: var(--#{$multiple-file-upload}--m-horizontal__title-text--FontSize);
     --#{$multiple-file-upload}__title-text-separator--FontFamily: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--FontFamily);
     --#{$multiple-file-upload}__title-text-separator--Display: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--Display);
-    --#{$multiple-file-upload}__title-text-separator--MarginTop: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginTop);
+    --#{$multiple-file-upload}__title-text-separator--MarginBlockStart: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginBlockStart);
     --#{$multiple-file-upload}__title-text-separator--FontSize: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--FontSize);
     --#{$multiple-file-upload}__title-text-separator--FontWeight: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--FontWeight);
-    --#{$multiple-file-upload}__info--MarginTop: var(--#{$multiple-file-upload}--m-horizontal__info--MarginTop);
+    --#{$multiple-file-upload}__info--MarginBlockStart: var(--#{$multiple-file-upload}--m-horizontal__info--MarginBlockStart);
   }
 
   &.pf-m-drag-over {
@@ -148,10 +148,10 @@
   grid-template-columns: var(--#{$multiple-file-upload}__main--GridTemplateColumns);
   gap: var(--#{$multiple-file-upload}__main--Gap);
   align-items: center;
-  padding-block-start: var(--#{$multiple-file-upload}__main--PaddingTop);
-  padding-block-end: var(--#{$multiple-file-upload}__main--PaddingBottom);
-  padding-inline-start: var(--#{$multiple-file-upload}__main--PaddingLeft);
-  padding-inline-end: var(--#{$multiple-file-upload}__main--PaddingRight);
+  padding-block-start: var(--#{$multiple-file-upload}__main--PaddingBlockStart);
+  padding-block-end: var(--#{$multiple-file-upload}__main--PaddingBlockEnd);
+  padding-inline-start: var(--#{$multiple-file-upload}__main--PaddingInlineStart);
+  padding-inline-end: var(--#{$multiple-file-upload}__main--PaddingInlineEnd);
   text-align: var(--#{$multiple-file-upload}__main--TextAlign);
   border: var(--#{$multiple-file-upload}__main--BorderWidth) var(--#{$multiple-file-upload}__main--BorderStyle) var(--#{$multiple-file-upload}__main--BorderColor);
   border-radius: var(--#{$multiple-file-upload}__main--BorderRadius);
@@ -178,8 +178,8 @@
 
 .#{$multiple-file-upload}__title-text-separator {
   display: var(--#{$multiple-file-upload}__title-text-separator--Display);
-  margin-block-start: var(--#{$multiple-file-upload}__title-text-separator--MarginTop);
-  margin-block-end: var(--#{$multiple-file-upload}__title-text-separator--MarginBottom);
+  margin-block-start: var(--#{$multiple-file-upload}__title-text-separator--MarginBlockStart);
+  margin-block-end: var(--#{$multiple-file-upload}__title-text-separator--MarginBlockEnd);
   font-family: var(--#{$multiple-file-upload}__title-text-separator--FontFamily);
   font-size: var(--#{$multiple-file-upload}__title-text-separator--FontSize);
   font-weight: var(--#{$multiple-file-upload}__title-text-separator--FontWeight);
@@ -192,16 +192,16 @@
 
 .#{$multiple-file-upload}__info {
   grid-area: info;
-  margin-block-start: var(--#{$multiple-file-upload}__info--MarginTop);
+  margin-block-start: var(--#{$multiple-file-upload}__info--MarginBlockStart);
   font-size: var(--#{$multiple-file-upload}__info--FontSize);
   color: var(--#{$multiple-file-upload}__info--Color);
 }
 
 .#{$multiple-file-upload}__status {
-  padding-block-start: var(--#{$multiple-file-upload}__status--PaddingTop);
-  padding-block-end: var(--#{$multiple-file-upload}__status--PaddingBottom);
-  padding-inline-start: var(--#{$multiple-file-upload}__status--PaddingLeft);
-  padding-inline-end: var(--#{$multiple-file-upload}__status--PaddingRight);
+  padding-block-start: var(--#{$multiple-file-upload}__status--PaddingBlockStart);
+  padding-block-end: var(--#{$multiple-file-upload}__status--PaddingBlockEnd);
+  padding-inline-start: var(--#{$multiple-file-upload}__status--PaddingInlineStart);
+  padding-inline-end: var(--#{$multiple-file-upload}__status--PaddingInlineEnd);
 }
 
 .#{$multiple-file-upload}__status,
@@ -223,8 +223,8 @@
   display: grid;
   grid-template-columns: var(--#{$multiple-file-upload}__status-item--GridTemplateColumns);
   gap: var(--#{$multiple-file-upload}__status-item--Gap);
-  padding-block-start: var(--#{$multiple-file-upload}__status-item--PaddingTop);
-  padding-block-end: var(--#{$multiple-file-upload}__status-item--PaddingBottom);
+  padding-block-start: var(--#{$multiple-file-upload}__status-item--PaddingBlockStart);
+  padding-block-end: var(--#{$multiple-file-upload}__status-item--PaddingBlockEnd);
   border-block-end: var(--#{$multiple-file-upload}__status-item--BorderWidth) solid var(--#{$multiple-file-upload}__status-item--BorderColor);
 }
 
