--- a/src/patternfly/components/Panel/panel.scss
+++ b/src/patternfly/components/Panel/panel.scss
@@ -24,26 +24,26 @@
   --#{$panel}--m-raised--BackgroundColor: var(--pf-t--global--background--color--floating--default);
 
   // header
-  --#{$panel}__header--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$panel}__header--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$panel}__header--PaddingBottom: var(--pf-t--global--spacer--md);
-  --#{$panel}__header--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$panel}__header--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$panel}__header--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__header--PaddingBlockEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__header--PaddingInlineStart: var(--pf-t--global--spacer--md);
 
   // main
   --#{$panel}__main--MaxHeight: none;
   --#{$panel}__main--Overflow: visible;
 
   // body
-  --#{$panel}__main-body--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$panel}__main-body--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$panel}__main-body--PaddingBottom: var(--pf-t--global--spacer--md);
-  --#{$panel}__main-body--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$panel}__main-body--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$panel}__main-body--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__main-body--PaddingBlockEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__main-body--PaddingInlineStart: var(--pf-t--global--spacer--md);
 
   // footer
-  --#{$panel}__footer--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$panel}__footer--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$panel}__footer--PaddingBottom: var(--pf-t--global--spacer--md);
-  --#{$panel}__footer--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$panel}__footer--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$panel}__footer--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__footer--PaddingBlockEnd: var(--pf-t--global--spacer--md);
+  --#{$panel}__footer--PaddingInlineStart: var(--pf-t--global--spacer--md);
   --#{$panel}__footer--BoxShadow: none;
 
   // scrollable
@@ -91,10 +91,10 @@
 }
 
 .#{$panel}__header {
-  padding-block-start: var(--#{$panel}__header--PaddingTop);
-  padding-block-end: var(--#{$panel}__header--PaddingBottom);
-  padding-inline-start: var(--#{$panel}__header--PaddingLeft);
-  padding-inline-end: var(--#{$panel}__header--PaddingRight);
+  padding-block-start: var(--#{$panel}__header--PaddingBlockStart);
+  padding-block-end: var(--#{$panel}__header--PaddingBlockEnd);
+  padding-inline-start: var(--#{$panel}__header--PaddingInlineStart);
+  padding-inline-end: var(--#{$panel}__header--PaddingInlineEnd);
 }
 
 .#{$panel}__main {
@@ -103,16 +103,16 @@
 }
 
 .#{$panel}__main-body {
-  padding-block-start: var(--#{$panel}__main-body--PaddingTop);
-  padding-block-end: var(--#{$panel}__main-body--PaddingBottom);
-  padding-inline-start: var(--#{$panel}__main-body--PaddingLeft);
-  padding-inline-end: var(--#{$panel}__main-body--PaddingRight);
+  padding-block-start: var(--#{$panel}__main-body--PaddingBlockStart);
+  padding-block-end: var(--#{$panel}__main-body--PaddingBlockEnd);
+  padding-inline-start: var(--#{$panel}__main-body--PaddingInlineStart);
+  padding-inline-end: var(--#{$panel}__main-body--PaddingInlineEnd);
 }
 
 .#{$panel}__footer {
-  padding-block-start: var(--#{$panel}__footer--PaddingTop);
-  padding-block-end: var(--#{$panel}__footer--PaddingBottom);
-  padding-inline-start: var(--#{$panel}__footer--PaddingLeft);
-  padding-inline-end: var(--#{$panel}__footer--PaddingRight);
+  padding-block-start: var(--#{$panel}__footer--PaddingBlockStart);
+  padding-block-end: var(--#{$panel}__footer--PaddingBlockEnd);
+  padding-inline-start: var(--#{$panel}__footer--PaddingInlineStart);
+  padding-inline-end: var(--#{$panel}__footer--PaddingInlineEnd);
   box-shadow: var(--#{$panel}__footer--BoxShadow);
 }
