--- a/src/patternfly/components/Radio/radio.scss
+++ b/src/patternfly/components/Radio/radio.scss
@@ -15,9 +15,9 @@
   --#{$radio}__description--Color: var(--pf-t--global--text--color--subtle);
 
   // * Radio input
-  --#{$radio}__input--first-child--MarginLeft: #{pf-size-prem(1px)};
-  --#{$radio}__input--last-child--MarginRight: #{pf-size-prem(1px)};
-  --#{$radio}__body--MarginTop: var(--pf-t--global--spacer--sm);
+  --#{$radio}__input--first-child--MarginInlineStart: #{pf-size-prem(1px)};
+  --#{$radio}__input--last-child--MarginInlineEnd: #{pf-size-prem(1px)};
+  --#{$radio}__body--MarginBlockStart: var(--pf-t--global--spacer--sm);
 
   // TODO: due to subpixel rendering and this value resolving to 21px, the checkbox vertical centering is off by 1px. Mozilla rounds subpixels up while chrome rounds down. This is a temporary fix until we can find a better solution.
   --#{$radio}__input--TranslateY: calc((var(--#{$radio}__label--LineHeight) * var(--#{$radio}__label--FontSize) / 2 ) - 50%); // find height of single label, divide by two, offset by 50% of own height
@@ -54,12 +54,12 @@
 
   // fixes a chrome issue where the left edge is cut off in a container with overflow hidden
   &:first-child {
-    margin-inline-start: var(--#{$radio}__input--first-child--MarginLeft);
+    margin-inline-start: var(--#{$radio}__input--first-child--MarginInlineStart);
   }
 
   // fixes a chrome issue where the right edge is cut off in a container with overflow hidden
   &:last-child {
-    margin-inline-end: var(--#{$radio}__input--last-child--MarginRight);
+    margin-inline-end: var(--#{$radio}__input--last-child--MarginInlineEnd);
   }
 }
 
@@ -78,7 +78,7 @@
 
 .#{$radio}__body {
   grid-column: 2;
-  margin-block-start: var(--#{$radio}__body--MarginTop);
+  margin-block-start: var(--#{$radio}__body--MarginBlockStart);
 }
 
 .#{$radio}__label,
