--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -8,7 +8,7 @@
   // Switch icon
   --#{$switch}__toggle-icon--FontSize: calc(var(--#{$switch}--FontSize) * .625); // We don't use an icon font-size here because this value allows the icon to scale relative to the switch's font-size.
   --#{$switch}__toggle-icon--Color: var(--pf-t--global--icon--color--on-brand--default);
-  --#{$switch}__toggle-icon--Left: calc(var(--#{$switch}--FontSize) * .4);
+  --#{$switch}__toggle-icon--InlineStart: calc(var(--#{$switch}--FontSize) * .4);
   --#{$switch}__toggle-icon--Offset: #{pf-size-prem(2px)}; // this value is created to handle sizing of the toggle and therefore the width of the toggle and its transform value.
   --#{$switch}__input--disabled__toggle-icon--Color: var(--pf-t--global--icon--color--disabled);
 
@@ -39,7 +39,7 @@
   --#{$switch}__toggle--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$switch}__toggle--before--Width: calc(var(--#{$switch}--FontSize) - var(--#{$switch}__toggle-icon--Offset));
   --#{$switch}__toggle--before--Height: var(--#{$switch}__toggle--before--Width);
-  --#{$switch}__toggle--before--Left: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
+  --#{$switch}__toggle--before--InlineStart: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
   --#{$switch}__toggle--before--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$switch}__toggle--before--Transition: transform .25s ease 0s;
   --#{$switch}__toggle--Width: calc(var(--#{$switch}__toggle--Height) + var(--#{$switch}__toggle-icon--Offset) + var(--#{$switch}__toggle--before--Width));
@@ -153,7 +153,7 @@
   &::before {
     position: absolute;
     inset-block-start: 50%;
-    inset-inline-start: var(--#{$switch}__toggle--before--Left);
+    inset-inline-start: var(--#{$switch}__toggle--before--InlineStart);
     display: block;
     width: var(--#{$switch}__toggle--before--Width);
     height: var(--#{$switch}__toggle--before--Height);
@@ -177,7 +177,7 @@
   position: absolute;
   inset-block-start: 0;
   inset-block-end: 0;
-  inset-inline-start: var(--#{$switch}__toggle-icon--Left);
+  inset-inline-start: var(--#{$switch}__toggle-icon--InlineStart);
   display: flex;
   align-items: center;
   font-size: var(--#{$switch}__toggle-icon--FontSize);
